chore: update hadolint action version and add linting options in deploy.yml; modify Dockerfile to install git without recommended packages

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ ARG NODE_VERSION=latest
 FROM node:${NODE_VERSION}
 
 # Install Git (usually included, but ensure)
-RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends git && rm -rf /var/lib/apt/lists/*
 
 # Install PNPM globally
 RUN npm install -g pnpm
