--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,11 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Lint Dockerfile
-        uses: hadolint/hadolint-action@master
+        uses: hadolint/hadolint-action@v3.3.0
         with:
           dockerfile: "docker/Dockerfile"
+          format: checkstyle
+          ignore: DL3008, DL3016
 
   build-and-push:
     runs-on: ubuntu-latest
