--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,13 @@ jobs:
       id: major-minor
       run: |
         NODE_MAJORMINOR=$(echo "${{ matrix.node }}" | cut -d. -f1-2)
-        echo "NODE_MAJORMINOR=$NODE_MAJORMINOR" >> $GITHUB_OUTPUT
+        echo "NODE_VERSION=$NODE_MAJORMINOR" >> $GITHUB_OUTPUT
 
     - name: Extract major
       id: major
       run: |
         NODE_MAJOR=$(echo "${{ matrix.node }}" | cut -d. -f1)
-        echo "NODE_MAJOR=$NODE_MAJOR" >> $GITHUB_OUTPUT
+        echo "NODE_VERSION=$NODE_MAJOR" >> $GITHUB_OUTPUT
 
     - name: Docker meta
       id: meta
@@ -63,9 +63,10 @@ jobs:
         push: true
         build-args: |
           NODE_VERSION=${{ matrix.node }}
-        tags: 
-          - ${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ matrix.node }}
-          - ${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ steps.major-minor.outputs.NODE_MAJORMINOR }}
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ matrix.node }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ steps.major-minor.outputs.NODE_VERSION }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ steps.major.outputs.NODE_VERSION }}
         labels: ${{ steps.meta.outputs.labels }}
 
     - name: Run Trivy vulnerability scanner
