--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,6 @@
 ARG NODE_VERSION=latest
-FROM node:${NODE_VERSION}
-
-# Install Git (usually included, but ensure)
-RUN apt-get update && apt-get install -y --no-install-recommends git && rm -rf /var/lib/apt/lists/*
-
-# Install PNPM globally
+FROM node:${NODE_VERSION}-alpine
+RUN apk add --no-cache git
 RUN npm install -g pnpm
-
-# Set working directory
 WORKDIR /app
-
-# Default command
 CMD ["node"]
