--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 ARG NODE_VERSION=latest
-FROM node:${NODE_VERSION}-alpine
+FROM node:${NODE_VERSION}
 RUN apk add --no-cache git
 RUN npm install -g pnpm
 WORKDIR /app
