--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 ARG NODE_VERSION=latest
 FROM node:${NODE_VERSION}
-RUN apk add --no-cache git
-RUN npm install -g pnpm
+RUN apk add --no-cache git \
+    && npm install -g pnpm
 WORKDIR /app
 CMD ["node"]
