--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: docker
+        pull: true
         push: true
         platforms: linux/amd64,linux/arm64
         build-args: |
