chore(build.yml): enable push trigger for master branch in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Build and push
 on:
-  workflow_dispatch:
-  # push:
-  #   branches:
-  #     - master
+  # workflow_dispatch:
+  push:
+    branches:
+      - master
   schedule:
     - cron: "0 5 * * 3"
 
