chore(sast.yml): update cron schedule comment for clarity and consistency

--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -3,7 +3,7 @@ name: SAST
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 14 * * *"       # Weekly: Increment patch version
+    - cron: "0 14 * * *"
 
 jobs:
   linter:
