--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 ARG NODE_VERSION=latest
 FROM node:${NODE_VERSION}
 RUN apk add --no-cache git \
+    && npm install -g npm@latest \
     && npm install -g pnpm
 WORKDIR /app
 CMD ["node"]
