--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,13 @@
 ARG NODE_VERSION=latest
 FROM node:${NODE_VERSION}
-RUN apk add --no-cache git \
-    && npm install -g npm@latest \
-    && npm install -g pnpm
+SHELL ["/bin/sh", "-eo", "pipefail", "-c"]
+
+RUN apk update \
+    && apk upgrade --no-cache \
+    && GIT_VERSION="$(apk policy git | sed -n '1s/^git-//;1s/:$//p')" \
+    && apk add --no-cache "git=${GIT_VERSION}" \
+    && npm install -g "npm@$(npm view npm version)" \
+    && npm install -g "pnpm@$(npm view pnpm version)"
+
 WORKDIR /app
 CMD ["node"]
