chore(docker): simplify Dockerfile by removing version-specific installations for git, npm, and pnpm to streamline the build process

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,9 @@
 ARG NODE_VERSION=latest
 FROM node:${NODE_VERSION}
-SHELL ["/bin/sh", "-eo", "pipefail", "-c"]
-
 RUN apk update \
     && apk upgrade --no-cache \
-    && GIT_VERSION="$(apk policy git | sed -n '1s/^git-//;1s/:$//p')" \
-    && apk add --no-cache "git=${GIT_VERSION}" \
-    && npm install -g "npm@$(npm view npm version)" \
-    && npm install -g "pnpm@$(npm view pnpm version)"
-
+    && apk add --no-cache git \
+    && npm install -g npm@latest \
+    && npm install -g pnpm
 WORKDIR /app
 CMD ["node"]
